# VotEdge

./: .env.example  .gitignore  README.md  analysis_results_AAP_20250920_140433.json  analysis_results_AAP_20251010_164152.json  analysis_results_BJP_20250920_135101.json  analysis_results_BJP_20250920_140008.json  analysis_results_BJP_20251010_163818.json  analysis_results_INC_20250920_140307.json  analysis_results_INC_20251010_164024.json  analysis_results_TMC_20251010_164332.json  analysis_results_bjp_20250920_141951.json  daily_update.py  election_forecast_summary.json  election_model.pkl  election_predictions_aap.json  election_predictions_bjp.json  election_predictions_inc.json  election_predictions_tmc.json  feature_importance.csv  features.json  main.py  party_twitter_handles.json  predictions.json  processed_news_data.json  processed_tweets_data.json  pyproject.toml  requirements.txt  sample_news_data.json  sample_tweets_data.json
airflow/: README.md  airflow.cfg  requirements.txt
airflow/dags/: election_analysis_dag.py  votedge_dag.py
chatbot/: chatbot.py
codes/: fetch_and_save.py  sentimentAnalysis.py  social_media_fetcher.py
data/raw/: news.csv  news_sentiment.csv  tweets.csv
mlruns/0/: meta.yaml
mlruns/341828246241570911/: meta.yaml
mlruns/341828246241570911/84a207c35ffe4f5ab2e738719216472f/: meta.yaml
mlruns/341828246241570911/84a207c35ffe4f5ab2e738719216472f/metrics/: accuracy
src/votedge/: __init__.py  data_processor.py  logger.py  news_fetcher.py  prediction_engine.py  sentimentAnalysis.py  social_media_fetcher.py  visualization.py
(+11 files in other folders)
